[package]
name = "bobolz-credential"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-std = "0.5.0"
blake = "2.0.2"
blake2 = "0.10.6"
bls12_381 = "0.8.0"
multibase = "0.9.1"
rand = "0.8.5"
schnorr_pok = "0.20.0"
serde = "1.0.215"
sha2 = "0.10.8"
