[package]
name = "bobolz-credential"
version = "0.2.0"
edition = "2021"

description = "Update some functions"
license = "MIT OR Apache-2.0"

[lib]
name = "bobolz_rs_lib"
path = "src/lib.rs"

[dependencies]
ark-bls12-381 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
criterion = "0.5.1"
hex = "0.4.3"
rand = "0.8.5"
sha2 = "0.10.8"

[[bench]]
name = "bobolz"
path = "benches/bench_bobolz.rs"
harness = false
