[package]
name = "mybbs"
version = "0.1.0"
edition = "2021"

[lib]
name = "mybbs"
path = "src/lib.rs"

[dependencies]
ark-bls12-381 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
criterion = "0.8.1"
hex = "0.4.3"
num-bigint = "0.4.6"
rand = "0.8"
sha2 = "0.10.9"

[[bench]]
name = "bench_mybbs"
path = "benches/bench_mybbs.rs"
harness = false
